[project]
name = "hypnos"
version = "0.1.0"
description = "HYPNOS - proactive personal intelligence command center"
requires-python = ">=3.12"
readme = "README.md"
# Optional metadata, but good practice:
# license = { text = "MIT" }
# authors = [{ name = "Your Name" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]

# ✅ This is the key: makes the project installable (and editable-installable)
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ✅ This is the other key: tells packaging that packages live under src/
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = ["^tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# ✅ Prefer relying on the installed package instead of injecting src onto sys.path:
# pythonpath = ["src"]
